--- a/docker-compose-non-dev.yml
+++ b/docker-compose-non-dev.yml
@@ -18,7 +18,8 @@ x-superset-depends-on: &superset-depends-on
   - db
   - redis
 x-superset-volumes:
-  &superset-volumes # /app/pythonpath_docker will be appended to the PYTHONPATH in the final container
+  # /app/pythonpath_docker will be appended to the PYTHONPATH in the final container
+  &superset-volumes
   - ./docker:/app/docker
   - superset_home:/app/superset_home
 
@@ -51,7 +52,7 @@ services:
     build:
       <<: *common-build
     container_name: superset_app
-    command: ["/app/docker/docker-bootstrap.sh", "app-gunicorn"]
+    command: [ "/app/docker/docker-bootstrap.sh", "app-gunicorn" ]
     user: "root"
     restart: unless-stopped
     ports:
@@ -63,7 +64,7 @@ services:
     container_name: superset_init
     build:
       <<: *common-build
-    command: ["/app/docker/docker-init.sh"]
+    command: [ "/app/docker/docker-init.sh" ]
     env_file: docker/.env
     depends_on: *superset-depends-on
     user: "root"
@@ -75,7 +76,7 @@ services:
     build:
       <<: *common-build
     container_name: superset_worker
-    command: ["/app/docker/docker-bootstrap.sh", "worker"]
+    command: [ "/app/docker/docker-bootstrap.sh", "worker" ]
     env_file: docker/.env
     restart: unless-stopped
     depends_on: *superset-depends-on
@@ -85,14 +86,14 @@ services:
       test:
         [
           "CMD-SHELL",
-          "celery -A superset.tasks.celery_app:app inspect ping -d celery@$$HOSTNAME",
+          "celery -A superset.tasks.celery_app:app inspect ping -d celery@$$HOSTNAME"
         ]
 
   superset-worker-beat:
     build:
       <<: *common-build
     container_name: superset_worker_beat
-    command: ["/app/docker/docker-bootstrap.sh", "beat"]
+    command: [ "/app/docker/docker-bootstrap.sh", "beat" ]
     env_file: docker/.env
     restart: unless-stopped
     depends_on: *superset-depends-on
