--- a/docker-compose-non-dev.yml
+++ b/docker-compose-non-dev.yml
@@ -21,7 +21,7 @@ x-superset-volumes:
   # /app/pythonpath_docker will be appended to the PYTHONPATH in the final container
   &superset-volumes
   - ./docker:/app/docker
-  - superset_home:/app/superset_home
+  - ./superset_home:/app/superset_home
 
 x-common-build: &common-build
   context: .
@@ -104,7 +104,7 @@ services:
 
 volumes:
   superset_home:
-    external: false
+    external: true
   db_home:
     external: false
   redis:
